--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,24 +11,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v3
-        with:
-          flutter-version: '3.5.0' # Specify the Flutter version you want to use
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build APK
-        run: flutter build apk --release
-
-      - name: Archive APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+    - name: Clone repository
+      uses: actions/checkout@v4
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: stable
+        flutter-version-file: pubspec.yaml # path to pubspec.yaml
+    - run: flutter --version
+    - name: Install dependencies
+      run: flutter pub get
+  
+    - name: Build APK
+      run: flutter build apk --release
+  
+    - name: Archive APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-release.apk
+        path: build/app/outputs/flutter-apk/app-release.apk
