--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         channel: stable
-        flutter-version-file: pubspec.yaml # path to pubspec.yaml
+        flutter_version: 3.5.0
     - run: flutter --version
     - name: Install dependencies
       run: flutter pub get
